kubernetes/istio/demo-app/session-4/after/httpbin.yaml
apiVersion: v1
kind: Service
metadata:
  name: httpbin
  labels:
    app: httpbin
    service: httpbin
    project: istio-course
spec:
  type: LoadBalancer
  ports:
    - port: 3000
      name: http
  selector:
    app: httpbin
---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: httpbin
  labels:
    app: httpbin
    project: istio-course
spec:
  replicas: 1
  selector:
    matchLabels:
      app: httpbin
      project: istio-course
  template:
    metadata:
      labels:
        app: httpbin
        project: istio-course
    spec:
      serviceAccountName: servicemesh-httpbin
      containers:
        - name: httpbin
          image: butuzov/demoapp-headers:v1.1
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3000
          resources:
            requests:
              memory: "50M"
              cpu: "0.25"
            limits:
              memory: "100M"
              cpu: "0.45"
